Fix spacing issue.

--- a/_includes/style.scss
+++ b/_includes/style.scss
@@ -94,7 +94,7 @@ p {
   hyphens: auto;
 }
 
-p + %headings {
+p + .tagline {
   margin-top: 1rem;
 }
 
